--- a/index.html
+++ b/index.html
@@ -82,16 +82,11 @@
             <div class="grid--sm">
               <div class="form-labels items-start">
                 <label for="email"><small>Email address</small></label>
-                <p class="hidden" id="error-msg">
+                <p class="hidden" id="error-message">
                   <small>Valid Email Required</small>
                 </p>
               </div>
-              <input
-                type="email"
-                id="email"
-                placeholder="email@company.com"
-                class="error"
-              />
+              <input type="email" id="email" placeholder="email@company.com" />
             </div>
             <button type="submit" class="btn">
               Subscribe to monthly newsletter
@@ -101,18 +96,21 @@
         <img
           src="/public/images/illustration-sign-up-desktop.svg"
           alt="graphs and stufff"
-          class="image--desktop"
+          class="image image--desktop"
         />
         <img
           src="/public/images/illustration-sign-up-mobile.svg"
           alt="graphs and stuff"
-          class="image--mobile"
+          class="image image--mobile"
         />
       </div>
       <div id="success" class="wrapper hidden">
         <div class="content grid--md">
           <img src="/public/images/icon-success.svg" alt="Success" />
-          <h1>Thanks for subscribing!</h1>
+          <h1>
+            Thanks for <br />
+            subscribing!
+          </h1>
           <p>
             A confirmation email has been sent to
             <strong id="success-email"></strong>. Please open it and press the
